...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search youtube videos" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FoM-b1-YNt">
                    <rect key="frame" x="16" y="10" width="311" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="Search Text Field">
                        <accessibilityTraits key="traits" searchField="YES"/>
                    </accessibility>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                </textField>
                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vFJ-Q8-erY">
                    <rect key="frame" x="331" y="10" width="35" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="Search Button" label="Search Button"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="35" id="FjY-8z-ksw"/>
                    </constraints>
                    <state key="normal" image="search_icon"/>
                    <connections>
                        <action selector="searchButtonPressed:" destination="-1" eventType="touchUpInside" id="3cQ-5W-ZQL"/>
...
