...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xvs-T3-AWg" customClass="YTPlayerView">
                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Youtube Video Player" label="Youtube Video Player">
                                    <accessibilityTraits key="traits" playsSound="YES" notEnabled="YES" updatesFrequently="YES" startsMediaSession="YES"/>
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GfW-4S-VJr">
                                <rect key="frame" x="10" y="10" width="40" height="40"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Video Loading View" label="Video Loading View">
                                    <accessibilityTraits key="traits" image="YES" staticText="YES" notEnabled="YES"/>
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstItem="DyK-P9-vjX" firstAttribute="leading" secondItem="OKQ-dn-TQc" secondAttribute="leading" constant="20" id="LfI-gU-SBP">
                                        <variation key="heightClass=compact-widthClass=compact" constant="100"/>
...
