...
                    <constraint firstItem="uHe-pa-Coc" firstAttribute="leading" secondItem="Ao2-nz-2X4" secondAttribute="leadingMargin" id="pCx-xh-cPx"/>
                    <constraint firstItem="VPK-Dl-8Wq" firstAttribute="top" secondItem="3yz-tu-HZf" secondAttribute="bottom" constant="4" id="vDB-xG-K2W"/>
                    <constraint firstItem="Yor-40-yhk" firstAttribute="leading" secondItem="JEU-vo-UIN" secondAttribute="trailing" constant="4" id="x3k-hL-fVd"/>
                    <constraint firstItem="3yz-tu-HZf" firstAttribute="top" secondItem="Ao2-nz-2X4" secondAttribute="topMargin" id="xsJ-gm-ViI"/>
                </constraints>
            </tableViewCellContentView>
            <accessibility key="accessibilityConfiguration" hint="Search Result View" identifier="Search Result" label="Search Result">
                <accessibilityTraits key="traits" staticText="YES" startsMediaSession="YES"/>
                <bool key="isElement" value="YES"/>
            </accessibility>
            <connections>
                <outlet property="playlistTitleLabel" destination="VPK-Dl-8Wq" id="Mxv-5b-fLZ"/>
                <outlet property="publishDateLabel" destination="Yor-40-yhk" id="Zd0-Le-W0S"/>
...
